--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=local
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+spring.data.mongodb.database=dbconsents
+spring.data.mongodb.uri=mongodb+srv://mmsMi:161020Pi@cluster.ul9uxjv.mongodb.net/?retryWrites=true&w=majority
+
 
 #spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
